crates/aura-macros/tests/trybuild/missing_namespace.stderr
error: Choreography is missing a namespace attribute. Add #[namespace = "unique_name"] before your choreography! macro. Each choreography in the same file must have a unique namespace.
 --> tests/trybuild/missing_namespace.rs:3:1
  |
3 | / choreography! {
4 | |     choreography MissingNamespace {
5 | |         roles: Alice, Bob;
... |
9 | | }
  | |_^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `super`
 --> tests/trybuild/missing_namespace.rs:3:1
  |
3 | / choreography! {
4 | |     choreography MissingNamespace {
5 | |         roles: Alice, Bob;
... |
9 | | }
  | |_^ no `Ping` in the root
  |
  = help: consider importing this variant instead:
          crate::rumpsteak_session_types::Label::Ping
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0782]: expected a type, found a trait
 --> tests/trybuild/missing_namespace.rs:3:1
  |
3 | / choreography! {
4 | |     choreography MissingNamespace {
5 | |         roles: Alice, Bob;
... |
9 | | }
  | |_^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
